fix: Add z-index to the main header and nav

--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -1,6 +1,7 @@
 .main-header {
   position: relative;
   padding: 1.5rem 0;
+  z-index: 9;
 
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
 
