--- a/stylesheets/layout/_navbar.scss
+++ b/stylesheets/layout/_navbar.scss
@@ -1,6 +1,7 @@
 .main-nav {
   position: fixed;
   bottom: 0;
+  z-index: 10;
 
   box-shadow: 0px -8px 24px rgba(0, 0, 0, 0.15);
   width: 100%;
